packages/pkgcraft/pkgcraft-0.0.11.tar.gz/pkgcraft-0.0.11/testdata/repos/valid/bad/eapi/invalid/invalid-9999.ebuild
EAPI=-1
DESCRIPTION="ebuild with invalid EAPI"
SLOT=0
